Agragando nueva seccion obtener el texto dentro de una imagen

--- a/templates/final-app/auth/confirm.html
+++ b/templates/final-app/auth/confirm.html
@@ -6,7 +6,7 @@
 
 <div class="container">
   <div class="m-4 d-flex justify-content-center align-items-center text-center" style="height: 600px;">
-    <div class="border text-white pt-4" style="width: 600px;height: 250px;">
+    <div class="border pt-4" style="width: 600px;height: 250px;">
       <h1>Cuenta Confirmada</h1>
       <p class="lead">Gracias por cofirmar su cuenta, ahora puedes continuar Iniciando Sesion</p>
       <p class="lead">
