--- a/templates/final-app/auth/base-auth.html
+++ b/templates/final-app/auth/base-auth.html
@@ -7,11 +7,13 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="static/css/background_auth.css">
+    
     {% block customCSS %}
     {% endblock %}
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body class="bg-light">
+<body>
     
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
